--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-APP_ROOT_URL=http://130.185.76.18:4040/
-APP_ROOT_URL_FILE=http://130.185.76.18:4041/
+REACT_APP_ENV=http://130.185.76.18:4040/
+# APP_ROOT_URL_FILE=http://130.185.76.18:4041/
 
-# REACT_APP_API_BASE_URL=http://apps.necopros.tk:9090/
