--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
-    "react-split-pane": "^0.1.92"
+    "react-split-pane": "^0.1.92",
+    "vue-cookies": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
